--- a/glacario/src/app/Componentes/body/indice/indice.component.html
+++ b/glacario/src/app/Componentes/body/indice/indice.component.html
@@ -55,6 +55,9 @@
     <li class="nav-item" routerLinkActive="active">
         <a class="nav-link nav-pill" [routerLink] = "['Cnc']"> CNC</a>
     </li>
+    <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link nav-pill" [routerLink] = "['Sap']"> SAP</a>
+    </li>
 </ul>
 </div>
 
