--- a/glacario/src/app/Componentes/body/indice/indice.component.html
+++ b/glacario/src/app/Componentes/body/indice/indice.component.html
@@ -1,63 +1,82 @@
 <div class="container-md">
     <h1>Topics</h1>
-    <ul class="navbar-nav flex-column nav-pills">
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link nav-pill"  [routerLink] = "['introduccion']" > Introduction </a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link nav-pill" [routerLink] = "['gaoffer']"> GA Offering</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link nav-pill" [routerLink] = "['scrum']"> Scrum </a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link nav-pill" [routerLink] = "['tema2']"> ERP</a>
-        </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['cljourney']"> Cloud Journey</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['tema1']"> AMS</a>
-    </li>   
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['cmnfund']"> Common Foundations </a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['accounting']"> Accounting</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['tema3']"> ITIL</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['navigate']"> Navigate</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['genledger']"> General Ledger</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['rpa']"> RPA</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['dscience']"> Data Science</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['dbt']"> DBT</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['oracluni']"> Oracle University</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['ssigma']"> Six Sigma</a>
-    </li>   
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['mktg']"> Marketing</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['Cnc']"> CNC</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link nav-pill" [routerLink] = "['Sap']"> SAP</a>
-    </li>
-</ul>
+    <div class="btn-group-vertical">
+        <button class="btn btn-primary" data-toggle="collapse" data-target="#SAP"> SAP </button>
+        <div id="SAP" class="collapse"> 
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                <a class="nav-link nav-pill"  [routerLink] = "['scrum']" > Scrum </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-pill" [routerLink] = "['gaoffer']"> GA Offering</a>
+                </li>
+            </ul>
+        </div>
+        <button  class="btn btn-secondary" data-toggle="collapse" data-target="#Academia"> Academia </button>
+        <div id="Academia" class="collapse">
+            <ul class="navbar-nav flex-column nav-pills">
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link nav-pill"  [routerLink] = "['introduccion']" > Introduction </a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link nav-pill" [routerLink] = "['gaoffer']"> GA Offering</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link nav-pill" [routerLink] = "['scrum']"> Scrum </a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link nav-pill" [routerLink] = "['tema2']"> ERP</a>
+                </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['cljourney']"> Cloud Journey</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['tema1']"> AMS</a>
+            </li>   
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['cmnfund']"> Common Foundations </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['accounting']"> Accounting</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['tema3']"> ITIL</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['navigate']"> Navigate</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['genledger']"> General Ledger</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['rpa']"> RPA</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['dscience']"> Data Science</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['dbt']"> DBT</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['oracluni']"> Oracle University</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['ssigma']"> Six Sigma</a>
+            </li>   
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['mktg']"> Marketing</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['Cnc']"> CNC</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link nav-pill" [routerLink] = "['Sap']"> SAP</a>
+            </li>
+        </ul>
+        </div>    
+    </div>
+
+    
+
 </div>
 
