Agregamos el servicio de Sap
Lo que hicimos fue configurar el servico de SAP. Además configuramos el components.ts y el component.html para que se muestre el contenido en forma de tablas.

--- a/glacario/src/app/Componentes/body/indice/indice.component.html
+++ b/glacario/src/app/Componentes/body/indice/indice.component.html
@@ -1,18 +1,15 @@
 <div class="container-md">
     <h1>Topics</h1>
     <div class="btn-group-vertical">
-        <button class="btn btn-primary" data-toggle="collapse" data-target="#SAP"> SAP </button>
+        <button class="btn btn-primary btn-block" data-toggle="collapse" data-target="#SAP"> SAP </button>
         <div id="SAP" class="collapse"> 
             <ul class="nav flex-column nav-pills">
                 <li class="nav-item">
-                <a class="nav-link nav-pill"  [routerLink] = "['scrum']" > Scrum </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-pill" [routerLink] = "['gaoffer']"> GA Offering</a>
+                    <a class="nav-link nav-pill"  [routerLink] = "['Sap']" > Sap </a>
                 </li>
             </ul>
         </div>
-        <button  class="btn btn-secondary" data-toggle="collapse" data-target="#Academia"> Academia </button>
+        <button  class="btn btn-primary btn-block" data-toggle="collapse" data-target="#Academia"> Academia </button>
         <div id="Academia" class="collapse">
             <ul class="navbar-nav flex-column nav-pills">
                 <li class="nav-item" routerLinkActive="active">
