--- a/glacario/src/app/Componentes/body/sap/sap.component.html
+++ b/glacario/src/app/Componentes/body/sap/sap.component.html
@@ -8,21 +8,26 @@
                 <p>{{sapa.descripcion}}</p>
                 <p>{{sapa.ejemplo}}</p>
 -->
-                <table class="table table-responsive">
+                <div class="table-responsive">
+                <table class="table table-dark table-striped">
                     <thead>
-                        <th> JDE </th>
-                        <th> SAP- S/4 HANA </th>
-                        <th> DESCRIPCIÓN </th>
-                        <th> EJEMPLOS </th>
-
+                        <tr>
+                            <th> JDE </th>
+                            <th> SAP- S/4 HANA </th>
+                            <th> DESCRIPCIÓN </th>
+                            <th> EJEMPLOS </th>
+                        </tr>
                     </thead>
                     <tbody>
-                        <td>{{ sapa.jde }} </td>
-                        <td>{{ sapa.saphana }} </td>
-                        <td>{{ sapa.descripcion }} </td>
-                        <td>{{ sapa.ejemplo }}</td>
+                        <tr>
+                            <td>{{ sapa.jde }} </td>
+                            <td>{{ sapa.saphana }} </td>
+                            <td>{{ sapa.descripcion }} </td>
+                            <td>{{ sapa.ejemplo }}</td>
+                        </tr>
                     </tbody>                    
                 </table>
+            </div>
 <!--                <hr width="75%" align="left"> -->
             </div>
     </div>
