--- a/glacario/src/app/Componentes/body/indice/indice.component.html
+++ b/glacario/src/app/Componentes/body/indice/indice.component.html
@@ -1,14 +1,15 @@
 <div class="container-md">
-    <h1>Topics</h1>
+    <h1 class="titulo_indice">Index</h1>
     <div class="btn-group-vertical">
         <button class="btn btn-primary btn-block" data-toggle="collapse" data-target="#SAP"> SAP </button>
         <div id="SAP" class="collapse"> 
             <ul class="nav flex-column nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link nav-pill"  [routerLink] = "['Sap']" > Sap </a>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link nav-pill"  [routerLink] = "['Sap']" > SAP </a>
                 </li>
             </ul>
         </div>
+        <hr class="separacion">
         <button  class="btn btn-primary btn-block" data-toggle="collapse" data-target="#Academia"> Academia </button>
         <div id="Academia" class="collapse">
             <ul class="navbar-nav flex-column nav-pills">
@@ -69,7 +70,7 @@
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link nav-pill" [routerLink] = "['Sap']"> SAP</a>
                 </li>
-        </ul>
+            </ul>
         </div>    
     </div>
 </div>
