--- a/glacario/src/app/Componentes/body/body.component.html
+++ b/glacario/src/app/Componentes/body/body.component.html
@@ -17,12 +17,12 @@
 
 
 <div class="jumbotron jumbotron-fluid animated fadeIn fast">
-    <div class="container colgante">
+    <div class="container-fluid">
             <div class="row">
-                    <div class="col-3 col-sm-3 fondo_indice">
+                    <div class="col-2 col-sm-2 fondo_indice">
                         <app-indice></app-indice>
                     </div>
-                    <div class="col-9 col-sm-9 fondo_desc">
+                    <div class="col-10 col-sm-10 fondo_desc">
                         <router-outlet></router-outlet>
                     </div>
             </div>
