--- a/glacario/src/app/Componentes/body/sap/sap.component.html
+++ b/glacario/src/app/Componentes/body/sap/sap.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid animated fadeIn fast">
     <div class="container">
-        <h1>Prueba SAP VS JDE</h1>
+        <h1>Comparison Between JDE and S/4 HANA concepts</h1>
         <hr width="100%" align="left">
             <div class="container" *ngFor="let sapa of sap" >
 <!--                <h2 class="card-title">{{ sapa.jde }}</h2>
@@ -12,10 +12,10 @@
                 <table class="table table-dark table-striped">
                     <thead>
                         <tr>
-                            <th> JDE </th>
-                            <th> SAP- S/4 HANA </th>
-                            <th> DESCRIPCIÓN </th>
-                            <th> EJEMPLOS </th>
+                            <th style="width: 15%"> JDE </th>
+                            <th style="width: 15%"> SAP- S/4 HANA </th>
+                            <th style="width: 35%"> DESCRIPCIÓN </th>
+                            <th style="width: 35%"> EJEMPLOS </th>
                         </tr>
                     </thead>
                     <tbody>
