Agregamos componente SAP Portugués
Se agregó el nuevo componente donde se alojará el glosario de SAP en portugués.
Se configuraron el, componene, la ruta y se puso en el índice el nuevo botón y ya redireccióna a la página que debería.

--- a/glacario/src/app/Componentes/body/indice/indice.component.html
+++ b/glacario/src/app/Componentes/body/indice/indice.component.html
@@ -16,17 +16,15 @@
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link nav-pill"  [routerLink] = "['Sap']" > SAP </a>
                 </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link nav-pill"  [routerLink] = "['SapBr']" > SAP Portugués </a>
+                </li>
             </ul>
         </div>
         <hr class="separacion">
         <button  class="btn btn-primary btn-block" data-toggle="collapse" data-target="#Academia"> Academia </button>
         <div id="Academia" class="collapse">
             <ul class="navbar-nav flex-column nav-pills">
-<!--
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link nav-pill"  [routerLink] = "['introduccion']" > Introduction </a>
-                </li>
--->
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link nav-pill" [routerLink] = "['gaoffer']"> GA Offering</a>
                 </li>
