--- a/glacario/src/app/Componentes/body/indice/indice.component.css
+++ b/glacario/src/app/Componentes/body/indice/indice.component.css
@@ -4,6 +4,7 @@
     font-family: 'Lato', sans-serif;
     font-size: 30px;
     color: darkslategray;
+    word-wrap: break-word;
     /*background-color: darkslategray;*/
 }
 
@@ -28,9 +29,14 @@
     background-color: darkslategray;
 }
 
+.nav-pills{
+    word-wrap: break-word;
+}
 .btn-primary{
     background-color: darkslategray;
     align-self: start;
+    size: inherit;
+    word-wrap: break-word;
 }
 
 .separacion{
