--- a/glacario/src/app/Componentes/header/header.component.css
+++ b/glacario/src/app/Componentes/header/header.component.css
@@ -18,7 +18,7 @@
     padding-top: 10px;
     text-align: center;
     vertical-align: middle;    
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     font-weight: bold;
     color:black;
